fix letter spacing

--- a/src/components/Vehicle/style.scss
+++ b/src/components/Vehicle/style.scss
@@ -42,7 +42,7 @@
 .Vehicle__detail-price {
   color: var(--gray);
   margin-bottom: 12px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   font-size: .9rem;
 
 }
